turned down livenessProbe

--- a/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
@@ -46,9 +46,9 @@ spec:
             port: {{ .Values.services.partner.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.partner.healthUrl }} 
-            port: {{ .Values.services.partner.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.partner.healthUrl }} 
+#            port: {{ .Values.services.partner.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }}
