--- a/deployment/sandbox-v2/helm/charts/prereg/templates/captcha-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/captcha-dep.yaml
@@ -47,9 +47,9 @@ spec:
             port: {{ .Values.services.captcha.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.captcha.healthUrl }}
-            port: {{ .Values.services.captcha.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+ #       livenessProbe:
+ #         httpGet:
+ #           path: {{ .Values.services.captcha.healthUrl }}
+ #           port: {{ .Values.services.captcha.containerPort }}
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }} 
