--- a/deployment/sandbox-v2/helm/charts/prereg/templates/datasync-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/datasync-dep.yaml
@@ -47,9 +47,9 @@ spec:
             port: {{ .Values.services.datasync.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.datasync.healthUrl }} 
-            port: {{ .Values.services.datasync.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+  #      livenessProbe:
+  #        httpGet:
+  #          path: {{ .Values.services.datasync.healthUrl }} 
+  #          port: {{ .Values.services.datasync.containerPort }} 
+  #       initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+  #        periodSeconds: {{ .Values.probe.period }} 
