--- a/deployment/sandbox-v2/helm/charts/prereg/templates/demographic-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/demographic-dep.yaml
@@ -47,9 +47,9 @@ spec:
             port: {{ .Values.services.demographic.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.demographic.healthUrl }} 
-            port: {{ .Values.services.demographic.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+ #       livenessProbe:
+ #         httpGet:
+ #           path: {{ .Values.services.demographic.healthUrl }} 
+ #           port: {{ .Values.services.demographic.containerPort }} 
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }} 
