--- a/deployment/sandbox-v2/helm/charts/prereg/templates/document-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/document-dep.yaml
@@ -47,9 +47,9 @@ spec:
             port: {{ .Values.services.document.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.document.healthUrl }}
-            port: {{ .Values.services.document.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+  #      livenessProbe:
+  #        httpGet:
+  #          path: {{ .Values.services.document.healthUrl }}
+  #          port: {{ .Values.services.document.containerPort }}
+  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+  #        periodSeconds: {{ .Values.probe.period }} 
