--- a/deployment/sandbox-v2/helm/charts/prereg/templates/login-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/login-dep.yaml
@@ -47,10 +47,10 @@ spec:
             port: {{ .Values.services.login.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.login.healthUrl }} 
-            port: {{ .Values.services.login.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+  #      livenessProbe:
+  #        httpGet:
+  #          path: {{ .Values.services.login.healthUrl }} 
+  #          port: {{ .Values.services.login.containerPort }} 
+  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+  #        periodSeconds: {{ .Values.probe.period }} 
           
