--- a/deployment/sandbox-v2/helm/charts/prereg/templates/qrcode-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/qrcode-dep.yaml
@@ -47,9 +47,9 @@ spec:
             port: {{ .Values.services.qrcode.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.qrcode.healthUrl }}
-            port: {{ .Values.services.qrcode.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.qrcode.healthUrl }}
+#            port: {{ .Values.services.qrcode.containerPort }}
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
