--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
@@ -31,11 +31,11 @@ spec:
             port: {{ .Values.services.ui.containerPort }}  # All defaults used
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+  #      livenessProbe:
+  #        tcpSocket:
+  #          port: {{ .Values.services.ui.containerPort }}  # All defaults used
+  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+  #       periodSeconds: {{ .Values.probe.period }} 
         volumeMounts:
             - name: ui-config 
               mountPath: /usr/share/nginx/html/assets/config.json
