turned down livenessProb

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/biosvc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/biosvc-dep.yaml
@@ -45,9 +45,9 @@ spec:
             port: {{ .Values.services.biosvc.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.biosvc.healthUrl }} 
-            port: {{ .Values.services.biosvc.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+ #       livenessProbe:
+ #         httpGet:
+ #           path: {{ .Values.services.biosvc.healthUrl }} 
+ #           port: {{ .Values.services.biosvc.ports.containerPort }} 
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }} 
