turned down livenessProb

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/camel-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/camel-dep.yaml
@@ -52,9 +52,9 @@ spec:
 #            port: {{ .Values.services.camel.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.camel.healthUrl }} 
-            port: {{ .Values.services.camel.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.camel.healthUrl }} 
+#            port: {{ .Values.services.camel.ports.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
