--- a/deployment/sandbox-v2/helm/charts/regproc/templates/eis-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/eis-dep.yaml
@@ -45,9 +45,9 @@ spec:
             port: {{ .Values.services.eis.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.eis.healthUrl }} 
-            port: {{ .Values.services.eis.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#       livenessProbe:
+#          httpGet:
+#           path: {{ .Values.services.eis.healthUrl }} 
+#           port: {{ .Values.services.eis.ports.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
