turned down livenessProb

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/external-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/external-dep.yaml
@@ -51,9 +51,9 @@ spec:
 #            port: {{ .Values.services.bio.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe: 
-          httpGet:
-            path: {{ .Values.services.external.healthUrl }} 
-            port: {{ .Values.services.external.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        livenessProbe: 
+#          httpGet:
+#            path: {{ .Values.services.external.healthUrl }} 
+#            port: {{ .Values.services.external.ports.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
