turned down livenessProb

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/manual-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/manual-dep.yaml
@@ -51,9 +51,9 @@ spec:
 #            port: {{ .Values.services.manual.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.manual.healthUrl }} 
-            port: {{ .Values.services.manual.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+ #       livenessProbe:
+ #        httpGet:
+ #           path: {{ .Values.services.manual.healthUrl }} 
+ #           port: {{ .Values.services.manual.ports.containerPort }} 
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }} 
