--- a/deployment/sandbox-v2/helm/charts/regproc/templates/uin-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/uin-dep.yaml
@@ -51,9 +51,9 @@ spec:
 #            port: {{ .Values.services.uin.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.uin.healthUrl }} 
-            port: {{ .Values.services.uin.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.uin.healthUrl }} 
+#            port: {{ .Values.services.uin.ports.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
