turned down livenessProb

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/uploader-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/uploader-dep.yaml
@@ -51,9 +51,9 @@ spec:
 #            port: {{ .Values.services.uploader.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.uploader.healthUrl }} 
-            port: {{ .Values.services.uploader.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        livenessProbe:
+ #         httpGet:
+  #          path: {{ .Values.services.uploader.healthUrl }} 
+  #          port: {{ .Values.services.uploader.ports.containerPort }} 
+  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+  #        periodSeconds: {{ .Values.probe.period }} 
