turned down livenessProb

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/printsvc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/printsvc-dep.yaml
@@ -45,9 +45,9 @@ spec:
             port: {{ .Values.services.printsvc.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.printsvc.healthUrl }} 
-            port: {{ .Values.services.printsvc.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.printsvc.healthUrl }} 
+#            port: {{ .Values.services.printsvc.ports.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
