--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-dep.yaml
@@ -45,11 +45,11 @@ spec:
             port: {{ .Values.ports.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          tcpSocket:
-            port: {{ .Values.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+ #       livenessProbe:
+ #         tcpSocket:
+ #           port: {{ .Values.ports.containerPort }}
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }} 
         volumeMounts:
         - name: softhsm-data
           mountPath: {{ .Values.mountPath }} 
