--- a/deployment/sandbox-v2/helm/charts/ida/templates/auth-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/auth-dep.yaml
@@ -48,9 +48,9 @@ spec:
             port: {{ .Values.services.auth.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.auth.healthUrl }} 
-            port: {{ .Values.services.auth.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+ #       livenessProbe:
+ #        httpGet:
+ #           path: {{ .Values.services.auth.healthUrl }} 
+ #           port: {{ .Values.services.auth.containerPort }} 
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }}
