--- a/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
@@ -48,9 +48,9 @@ spec:
             port: {{ .Values.services.kyc.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.kyc.healthUrl }} 
-            port: {{ .Values.services.kyc.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.kyc.healthUrl }} 
+#            port: {{ .Values.services.kyc.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }}
