turned down livenessProb

--- a/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
@@ -48,9 +48,9 @@ spec:
             port: {{ .Values.services.otp.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.otp.healthUrl }} 
-            port: {{ .Values.services.otp.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+  #      livenessProbe:
+  #        httpGet:
+  #          path: {{ .Values.services.otp.healthUrl }} 
+  #          port: {{ .Values.services.otp.containerPort }} 
+  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+  #        periodSeconds: {{ .Values.probe.period }}
