--- a/deployment/sandbox-v2/helm/charts/ida/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/values.yaml
@@ -26,7 +26,7 @@ services:
     dockerTag: 1.0.9
     containerPort: 8093
     servicePort: 80
-    hsmUrl: tcp://softhsm-idainternal:80   # Should match with softhsm chart service name and port (see, ida.yml and role/softhsm)
+    hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/internal
     healthUrl: /idauthentication/v1/internal/actuator/health
   kyc: 
@@ -35,7 +35,7 @@ services:
     dockerTag: 1.0.9
     containerPort: 8091
     servicePort: 80
-    hsmUrl: tcp://softhsm-idakyc:80   # Should match with softhsm chart service name and port (see, ida.yml and role/softhsm)
+    hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/kyc
     healthUrl: /idauthentication/v1/kyc/actuator/health
   otp: 
@@ -44,6 +44,14 @@ services:
     dockerTag: 1.0.9
     containerPort: 8092
     servicePort: 80
-    hsmUrl: tcp://softhsm-idaotp:80   # Should match with softhsm chart service name and port (see, ida.yml and role/softhsm)
+    hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/otp
     healthUrl: /idauthentication/v1/otp/actuator/health
+
+generators:
+  key:  
+    name:  ida-key-generator 
+    dockerImage: mosipdev/authentication-keys-generator
+    dockerTag: 1.0.9
+    hsmUrl: tcp://softhsm-ida:80   
+   
