Registration client properties added.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
@@ -1,3 +1,6 @@
+mosip.registration.client.id=mosip-reg-client
+mosip.registration.secret.Key=abc123
+
 #Thereshold Quality Value for IRIS capture. Possible values 1 to 100.
 mosip.registration.iris_threshold=60
 
