Image pull policy updated in idrepo.

--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: {{ .Values.services.identity.serviceName }} 
         image: {{ .Values.services.identity.dockerImage }}:{{ .Values.services.identity.dockerTag }} 
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
