Reg Proc properties corrected.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -127,20 +127,16 @@ TEMPLATES=${MASTER}/templates
 DEVICEVALIDATEHISTORY=${MASTER}/deviceprovidermanagement/validate/history
 
 #ID Repository Services
-IDREPOSITORY=${mosip.base.url}/idrepository/v1/identity/
-IDREPOGETIDBYUIN=${mosip.base.url}/idrepository/v1/identity/uin
+IDREPOSITORY=http://idrepo-identity-service/idrepository/v1/identity/
+IDREPOGETIDBYUIN=http://idrepo-identity-service/idrepository/v1/identity/uin
 UINGENERATOR=http://kernel-idgenerator-service/v1/idgenerator/uin
-RETRIEVEIDENTITYFROMRID=${mosip.base.url}/idrepository/v1/identity/rid
-RETRIEVEIDENTITY=${mosip.base.url}/idrepository/v1/identity/uin
-CREATEVID=${mosip.base.url}/idrepository/v1/vid
-GETUINBYVID=${mosip.base.url}/idrepository/v1/vid
+RETRIEVEIDENTITYFROMRID=http://kernel-idgenerator-service/idrepository/v1/identity/rid
+RETRIEVEIDENTITY=http://idrepo-identity-service/idrepository/v1/identity/uin
+CREATEVID=http://idrepo-vid-service/idrepository/v1/vid
+GETUINBYVID=http://idrepo-vid-service/idrepository/v1/vid
 
 #BioDedupe Services
 BIODEDUPE=http://regproc-bio-dedupe-service/registrationprocessor/v1/bio-dedupe/biometricfile
-
-#ABIS services
-BIODEDUPEINSERT=${mosip.base.url}/abis/v0.1/registration-processor/abis/insert
-BIODEDUPEPOTENTIAL=${mosip.base.url}/abis/v0.1/registration-processor/abis/identity
 
 #Encrypt Services
 ENCRYPTURL=http://kernel-keymanager-service/v1/keymanager/encrypt
@@ -160,7 +156,7 @@ NGINXDMZURL=http://dmzworker0:30080/registrationprocessor/v1/dmzpacketserver
 CRYPTOMANAGERDECRYPT=http://kernel-keymanager-service/v1/keymanager/decrypt
 
 #External Service
-EISERVICE=${mosip.base.url}/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
+EISERVICE=http://regproc-external-integration-service/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
 
 #RID Generation Service
 RIDGENERATION=http://kernel-ridgenerator-service/v1/ridgenerator/generate/rid
