--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -67,26 +67,6 @@ keycloak_mosip_users: # Assumption "username.json" exists with same username ins
 keycloak_mosip_user_role_map:  
   # testuser
   - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_OFFICER'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'ID_AUTHENTICATION'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'DEVICE_PROVIDER'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'SUPERADMIN'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'ZONAL_ADMIN'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'GLOBAL_ADMIN'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'RESIDENT'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_PROCESSOR'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'ZONAL_APPROVER'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_OFFICER'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_OPERATOR'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'AUTH'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'CENTRAL_APPROVER'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'MISP'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'PREREG'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'CENTRAL_ADMIN'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'PRE_REGISTRATION'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'PRE_REGISTRATION_ADMIN'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_ADMIN'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_SUPERVISOR'}
-  - {realm_id: 'mosip', username: 'testuser', role_name: 'RESIDENT'}
 
   - {realm_id: 'mosip', username: '110005', role_name: 'GLOBAL_ADMIN'}
   - {realm_id: 'mosip', username: '110005', role_name: 'ID_AUTHENTICATION'}
@@ -155,11 +135,15 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110123', role_name: 'REGISTRATION_OFFICER'}
   - {realm_id: 'mosip', username: '110123', role_name: 'REGISTRATION_SUPERVISOR'}
 
-  - {realm_id: 'mosip', username: '110124', role_name: 'REGISTRATION_OFFICER'}
   - {realm_id: 'mosip', username: '110124', role_name: 'PARTNER'}
   - {realm_id: 'mosip', username: '110124', role_name: 'MISP'}
   - {realm_id: 'mosip', username: '110124', role_name: 'POLICYMANAGER'}
   - {realm_id: 'mosip', username: '110124', role_name: 'PARTNERMANAGER'}
+
+  - {realm_id: 'mosip', username: '110118', role_name: 'PARTNER'}
+  - {realm_id: 'mosip', username: '110118', role_name: 'MISP'}
+  - {realm_id: 'mosip', username: '110118', role_name: 'POLICYMANAGER'}
+  - {realm_id: 'mosip', username: '110118', role_name: 'PARTNERMANAGER'}
 
   - {realm_id: 'mosip', username: '110125', role_name: 'REGISTRATION_OFFICER'}
 
