Resident services client property corrected.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
@@ -29,9 +29,9 @@ resident.appid=resident
 #Token generation version
 token.request.version=1.0
 # Kernel auth client ID for IDA
-resident.clientId=resident
+resident.clientId=mosip-resident-client
 # Kernel auth secret key for IDA
-resident.secretKey=dbe554cd-81e8-44c2-b8ec-3d8090aca1f4
+resident.secretKey=abc123
 #Token genration issue url
 token.request.issuerUrl=${mosip.keycloak.issuerUrl}
 
