Properties, nginx updated.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
@@ -24,6 +24,10 @@ mosip.kernel.idobjectvalidator.mandatory-attributes.pre-registration.child-regis
 mosip.kernel.idobjectvalidator.mandatory-attributes.reg-client.child-registration=fullName,dateOfBirth|age,gender,addressLine1,region,province,city,zone,postalCode,residenceStatus,referenceIdentityNumber,parentOrGuardianName,parentOrGuardianRID|parentOrGuardianUIN,parentOrGuardianBiometrics
 mosip.kernel.idobjectvalidator.mandatory-attributes.reg-processor.child-registration=fullName,dateOfBirth|age,gender,addressLine1,region,province,city,zone,postalCode,residenceStatus,referenceIdentityNumber,parentOrGuardianName,parentOrGuardianRID|parentOrGuardianUIN,parentOrGuardianBiometrics
 
+mosip.kernel.idobjectvalidator.mandatory-attributes.reg-processor.child-registration=fullName,dateOfBirth|age,gender,addressLine1,regi
+mosip.kernel.idobjectvalidator.mandatory-attributes.reg-processor.other=IDSchemaVersion,UIN
+mosip.kernel.idobjectvalidator.mandatory-attributes.reg-processor.lost=IDSchemaVersion
+
 # Business Validation for ID Schema attributes - These should not be changed, as it impacts all modules
 mosip.id.validation.identity.dateOfBirth=^(1869|18[7-9][0-9]|19\\d\\d|20\\d\\d)/([0][1-9]|1[0-2])/([0][1-9]|[1-2]\\d|3[01])$
 mosip.id.validation.identity.phone=^([6-9]{1})([0-9]{9})$
@@ -373,7 +377,7 @@ server.max-http-header-size=10000000
 mosip.kernel.auth.adapter.ssl-bypass=true
 mosip.kernel.auth.appid-realm-map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip'}
 
-+#---------------------------------prometheus : Metrics related configurations---------------------------------------------------#
+#---------------------------------prometheus : Metrics related configurations---------------------------------------------------#
 management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
@@ -382,3 +386,7 @@ management.metrics.export.prometheus.enabled=true
 mosip.kernel.syncdata-service-idschema-url=${mosip.masterdata.base.url}/v1/masterdata/idschema/latest
 mosip.kernel.syncdata-service-dynamicfield-url=${mosip.masterdata.base.url}/v1/masterdata/dynamicfields
 mosip.kernel.keymanager-service-validate-url=${mosip.keymanager.base.url}/v1/keymanager/validate
+
+# ------------ GPS settings ---------
+
+mosip.registration.gps_device_enable_flag=n
