Proxy otp property added in kernel.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -345,3 +345,6 @@ kernel.uin.transfer-scheduler-hours=17
 kernel.uin.transfer-scheduler-days_of_month=*
 kernel.uin.transfer-scheduler-months=*
 kernel.uin.transfer-scheduler-days_of_week=*
+
+# Proxy otp
+mosip.kernel.auth.proxy-otp-value=111111
